--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
         ]
     },
     "devDependencies": {
+        "@tailwindcss/forms": "^0.5.2",
         "@types/react-currency-formatter": "^1.1.4",
         "@types/redux-logger": "^3.0.9",
         "@typescript-eslint/eslint-plugin": "^5.33.1",
