--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "react-currency-formatter": "^1.1.0",
         "react-dom": "^18.2.0",
         "react-redux": "^8.0.2",
+        "react-router-dom": "^6.3.0",
         "react-scripts": "5.0.1",
         "redux": "^4.2.0",
         "redux-logger": "^3.0.6",
