--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
         "@types/react": "^18.0.0",
         "@types/react-dom": "^18.0.0",
         "@types/react-redux": "^7.1.24",
+        "animate.css": "^4.1.1",
         "bootstrap": "^5.2.0",
         "react": "^18.2.0",
         "react-currency-formatter": "^1.1.0",
