--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@types/react-dom": "^18.0.0",
         "@types/react-redux": "^7.1.24",
         "animate.css": "^4.1.1",
+        "aos": "^3.0.0-beta.6",
         "bootstrap": "^5.2.0",
         "react": "^18.2.0",
         "react-currency-formatter": "^1.1.0",
