--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
         "@types/react-redux": "^7.1.24",
         "animate.css": "^4.1.1",
         "aos": "^3.0.0-beta.6",
+        "axios": "^0.27.2",
         "bootstrap": "^5.2.0",
         "react": "^18.2.0",
         "react-currency-formatter": "^1.1.0",
@@ -58,6 +59,7 @@
         "@typescript-eslint/eslint-plugin": "^5.33.1",
         "@typescript-eslint/parser": "^5.33.1",
         "autoprefixer": "^10.4.8",
+        "eslint": "^7.32.0 || ^8.2.0",
         "eslint-config-airbnb": "^19.0.4",
         "eslint-config-prettier": "^8.5.0",
         "eslint-plugin-import": "^2.25.3",
