--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.35.0",
+    "react-hot-toast": "^2.4.0",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
+    "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.0"
