--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "redux-logger": "^3.0.6",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.1",
+    "sweetalert2": "^11.4.33",
     "swiper": "^8.3.2",
     "web-vitals": "^2.1.0"
   },
