--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.4",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
     "redux-logger": "^3.0.6",
