--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "redux-thunk": "^2.4.1",
     "sweetalert2": "^11.4.33",
     "swiper": "^8.3.2",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
