--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
     "bootstrap": "^5.2.0",
     "chart.js": "^3.9.1",
     "chartjs-adapter-moment": "^1.0.0",
+    "draft-js": "^0.11.7",
+    "immutable": "^4.1.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^18.2.0",
+    "react-draft-wysiwyg": "^1.15.0",
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.35.0",
     "react-hot-toast": "^2.4.0",
