--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "aos": "^3.0.0-beta.6",
     "axios": "^0.27.2",
     "bootstrap": "^5.2.0",
+    "buffer": "^6.0.3",
     "chart.js": "^3.9.1",
     "chartjs-adapter-moment": "^1.0.0",
     "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "immutable": "^4.1.0",
     "moment": "^2.29.4",
     "react": "^18.2.0",
@@ -27,6 +29,7 @@
     "react-flatpickr": "^3.10.13",
     "react-hook-form": "^7.35.0",
     "react-hot-toast": "^2.4.0",
+    "react-html-parser": "^2.0.2",
     "react-icons": "^4.4.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
@@ -69,6 +72,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.2",
+    "@tailwindcss/typography": "^0.5.7",
     "@types/react-currency-formatter": "^1.1.4",
     "@types/redux-logger": "^3.0.9",
     "autoprefixer": "^10.4.8",
