--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "draftjs-to-html": "^0.9.1",
     "immutable": "^4.1.0",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.38",
     "react": "^18.2.0",
     "react-currency-formatter": "^1.1.0",
     "react-dom": "^18.2.0",
@@ -31,6 +32,7 @@
     "react-hot-toast": "^2.4.0",
     "react-html-parser": "^2.0.2",
     "react-icons": "^4.4.0",
+    "react-moment": "^1.1.2",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
