--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.4.0",
+    "react-share": "^4.4.1",
     "react-spinners": "^0.13.4",
     "react-transition-group": "^4.4.5",
     "redux": "^4.2.0",
